Change factory to use linked list instead of array